--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -235,6 +235,18 @@ a {
     position: fixed;
 }
 
+.portfolio_iframe {
+    max-width: 100%;
+    width: 560px;
+    height: 315px;
+    border-radius: 15px; /* This rounds the corners */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: none;
+  }
+
 /* Update your media query */
 @media screen and (max-width: 1100px) {
     .hamburger-menu {
