--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -104,7 +104,7 @@ a {
 }
 
 .about_header {
-    font-family: 'Permanent Marker', cursive; 
+    /* font-family: 'Permanent Marker', cursive;  */
 	color: #f1c40f;
   }
 
